--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Passanger counter</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <h1>Passanger Counter</h1>
+    </div>
   </body>
 </html>
