Updated the html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <div class="container">
       <h1>Passanger Counter</h1>
+      <h2>People entered:</h2>
+      <h2>0</h2>
+      <button>INCREMENT</button>
+      <button>SAVE</button>
     </div>
   </body>
 </html>
