Updated the css  stylesheet

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h2>0</h2>
       <button>INCREMENT</button>
       <button>SAVE</button>
+      <p>Previous entries:</p>
     </div>
   </body>
 </html>
