updated the html file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
       <h1>Passanger Counter</h1>
       <h2>People entered:</h2>
       <h2>0</h2>
-      <button>INCREMENT</button>
-      <button>SAVE</button>
+      <div>
+        <button>INCREMENT</button>
+      </div>
+      <div>
+        <button>SAVE</button>
+      </div>
       <p>Previous entries:</p>
     </div>
   </body>
