Updated the html file and added the js file

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="container">
       <h1>Passanger Counter</h1>
       <h2>People entered:</h2>
-      <h2>0</h2>
+      <h2 id="passangers">0</h2>
       <div>
-        <button>INCREMENT</button>
+        <button id="icrease-btn">INCREMENT</button>
       </div>
       <div>
-        <button>SAVE</button>
+        <button id="save-btn">SAVE</button>
       </div>
-      <p>Previous entries:</p>
+      <p id="previous-entries">Previous entries:</p>
     </div>
   </body>
 </html>
