linked the js file to the html file

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
       </div>
       <p id="previous-entries">Previous entries:</p>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
