Updated the js functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>People entered:</h2>
       <h2 id="passangers">0</h2>
       <div>
-        <button id="icrease-btn">INCREMENT</button>
+        <button id="increase-btn">INCREMENT</button>
       </div>
       <div>
         <button id="save-btn">SAVE</button>
