Updated the index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <div>
         <button id="save-btn">SAVE</button>
       </div>
+      <div>
+        <button>Reset</button>
+      </div>
       <p id="previous-entries">Previous entries:</p>
     </div>
     <script src="index.js"></script>
