--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="save-btn">SAVE</button>
       </div>
       <div>
-        <button>Reset</button>
+        <button id="reset-btn">Reset</button>
       </div>
       <p id="previous-entries">Previous entries:</p>
     </div>
